src/test/resources/invalid/typecheck/Return_WrongType.vas
class Main is
    this() is
    end

    method test() : Integer is
        return false
    end
end